Update JVMud sources and project structure